[package]
name = "tfhe-backward-compat-data"
edition = "2024"
version = "0.9.0"
license = "BSD-3-Clause-Clear"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.8", features = ["integer128"] }
ciborium = "0.2"
bincode = "1.3"
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
