[package]
name = "tfhe-benchmark-parser"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false

[lib]
name = "tfhe_benchmark_parser"
path = "src/lib.rs"

[[bin]]
name = "tfhe-benchmark-parser"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
benchmark_spec = { path = "../benchmark_spec" }
clap = { version = "=4.5.30", features = ["derive"] }
csv = "1.3.0"
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = "1.0.94"
